Fix a bug on Firefox where the timer page has a scroll bar. Resolves #189.

--- a/cubersio/static/less/timer/common.less
+++ b/cubersio/static/less/timer/common.less
@@ -112,7 +112,7 @@
 
 .timer-container {
     margin-top: @navbar-height;
-    height: ~"calc(100% - 48px)"; // 48px is navbar-height, but we can't use a variable in this context
+    height: ~"calc(100vh - 48px)"; // 48px is navbar-height, but we can't use a variable in this context
     background-color: @highlight-color;
 }
 
